themes/kmkh/static/css/usher.css
.reservation {
    left: 0;
    bottom: 0;
    width: 100%;
    background-color: rgba(254,254,254,1);
    color: black;
    position: fixed;
    font-size: var(--font-size-small);
    line-height: var(--line-height-small);
    padding-top: 20px;
    padding-bottom: 20px;
    box-shadow: 0px 0px 50px 0px rgba(0,0,0,0.2);
}

.to_reservation {
    width: 100%;
    font-style: italic;
}

.book {
    font-size: var(--font-size-regular);
    line-height: var(--line-height-regular);
    width: 100%;
    text-align: center;
    cursor: pointer;
}

.usher p {
    padding-bottom: 20px;
}

.usher .form_row {
    padding-bottom: 10px
}

.to_reservation, .usher {
    padding-left: 60px;
    padding-right: 75px;
    width: auto;
    max-width: 1000px;
    margin: auto;
}

.usher .panel.details  {
    padding-top: 20px;
}

@media only screen and (min-width: 600px) {
    .usher .panel {
        width: 46%;
    }

    .usher .panel.places  {
        float: left;
    }

    .usher .panel.details  {
        float: right;
        padding-top: 0;
    }
}

.usher, .init-hidden {
    display: none;
}

.usher_occupied {
    fill: black;
    stroke-width: 0;
}

.usher_empty {
    fill: white;
    stroke: black;
    stroke-width: 2;
}

.usher_selected {
    fill: #333;
    stroke-width: 0;
}

.usher_pending {
    fill: #666;
    stroke-width: 0;
}

#stage {
    fill: white;
    stroke: black;
    stroke-width: 2;
}

